infra/k8s/comments-depl.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
  labels:
    app: comments
spec:
  replicas: 1 # number of pods to deploy
  selector: # selectors are used to select pods for deployment
    matchLabels: 
      app: comments # match pods with this label
  template: # template is used to define pod spec
    metadata:
      labels: 
        app: comments
    spec: # spec is used to define pod spec
      containers:
        - name: comments
          image: blog_services
          imagePullPolicy: IfNotPresent
          command: ["yarn", "comments"]
---

apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  type: ClusterIP
  selector:
    app: comments
  ports:
    - name: comments
      port: 4001
      targetPort: 4001
      protocol: TCP
