infra/k8s/event-bus-depl.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
  labels:
    app: event-bus
spec:
  replicas: 1 # number of pods to deploy
  selector: # selectors are used to select pods for deployment
    matchLabels: 
      app: event-bus # match pods with this label
  template: # template is used to define pod spec
    metadata:
      labels: 
        app: event-bus
    spec: # spec is used to define pod spec
      containers:
        - name: event-bus
          image: blog_services
          imagePullPolicy: IfNotPresent
          command: ["yarn", "eventbus"]
---

apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  type: ClusterIP
  selector:
    app: event-bus
  ports:
    - name: event-bus
      port: 4005
      targetPort: 4005
      protocol: TCP
