infra/k8s/moderation-depl.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
  labels:
    app: moderation
spec:
  replicas: 1 # number of pods to deploy
  selector: # selectors are used to select pods for deployment
    matchLabels: 
      app: moderation # match pods with this label
  template: # template is used to define pod spec
    metadata:
      labels: 
        app: moderation
    spec: # spec is used to define pod spec
      containers:
        - name: moderation
          image: blog_services
          imagePullPolicy: IfNotPresent
          command: ["yarn", "moderation"]
---

apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  type: ClusterIP
  selector:
    app: moderation
  ports:
    - name: moderation
      port: 4003
      targetPort: 4003
      protocol: TCP
