infra/k8s/query-depl.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
  labels:
    app: query
spec:
  replicas: 1 # number of pods to deploy
  selector: # selectors are used to select pods for deployment
    matchLabels: 
      app: query # match pods with this label
  template: # template is used to define pod spec
    metadata:
      labels: 
        app: query
    spec: # spec is used to define pod spec
      containers:
        - name: query
          image: blog_services
          imagePullPolicy: IfNotPresent
          command: ["yarn", "query"]
---

apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  type: ClusterIP
  selector:
    app: query
  ports:
    - name: query
      port: 4002
      targetPort: 4002
      protocol: TCP
